--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -3,18 +3,8 @@
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
-
-Welcome to your new app.
 <br />
 <br />
+@code {
 
-@inject IHttpContextAccessor _accessor
-@if (_accessor.HttpContext.User.Claims.Any())
-{
-    @foreach (var item in _accessor.HttpContext.User.Claims)
-    {
-        @item.Value
-        <br />
-        <br />
-    }
 }
